# motu-avb-api

./: Cargo.toml  LICENSE.txt  README.md
examples/: disc.rs  general.rs  serialization.rs  streaming_discovery.rs
src/: definitions.rs  device.rs  discover.rs  extchannel.rs  lib.rs  request.rs  value.rs
