[package]
name = "motu_avb_api"
version = "0.2.0"
edition = "2021"
license = "MIT"
keywords = ["motu", "avb", "api", "control"]
categories = ["api-bindings"]
description = "Control the MOTU AVB soundcards from Rust"
repository = "https://github.com/coral/motu-avb-api"

[dependencies]
reqwest = { version = "0.11.13", features = ["json", "multipart"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-zeroconf = "0.2.2"
thiserror = "1.0.37"
rand = "0.8.5"
regex = "1.7.0"
lazy_static = "1.4.0"
dashmap = { version = "5.4.0", features = ["serde"] }
uriparse = "0.6.4"

[dev-dependencies]
anyhow = "1.0.53"
